.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/AGX_Bulk_Job_Req__c.object-meta.xml
<CustomObject>
    <label>AGX Bulk Job Request</label>
    <nameField>
        <displayFormat>ABJR-{000000000}</displayFormat>
        <label>AGX Bulk Job Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AGX Bulk Job Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>