.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_2c9_Timesheet__c.field-meta.xml
<CustomField>
    <fullName>agx_2c9_Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>tc9_et__Timesheet__c</referenceTo>
    <relationshipLabel>AGX Bulk Job Requests</relationshipLabel>
    <relationshipName>AGX_Bulk_Job_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>