.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>agx_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>