.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Client__c.field-meta.xml
<CustomField>
    <fullName>agx_Client__c</fullName>
    <label>Client</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>