.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Date_From__c.field-meta.xml
<CustomField>
    <fullName>agx_Date_From__c</fullName>
    <label>Date From</label>
    <type>Date</type>
</CustomField>