.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>agx_Job_Type__c</fullName>
    <label>Job Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timesheet Approve</fullName>
            </value>
            <value>
                <fullName>Timesheet Unprocess to NEW</fullName>
            </value>
            <value>
                <fullName>Timesheet Unprocess to READY</fullName>
            </value>
            <value>
                <fullName>Timesheet Submit</fullName>
            </value>
            <value>
                <fullName>Timesheet Process Parameters</fullName>
            </value>
            <value>
                <fullName>Timesheet Unprocess Parameters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>