.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Payment_Entity__c.field-meta.xml
<CustomField>
    <fullName>agx_Payment_Entity__c</fullName>
    <label>Payment Entity</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>