.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Payroll_Tax_Location__c.field-meta.xml
<CustomField>
    <fullName>agx_Payroll_Tax_Location__c</fullName>
    <label>Branch</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>