.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>agx_Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>