.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Sirenum__c.field-meta.xml
<CustomField>
    <fullName>agx_Sirenum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sirenum</label>
    <type>Checkbox</type>
</CustomField>