.vscode/allianceuat_compare/force-app/main/default/objects/AGX_Bulk_Job_Req__c/fields/agx_Status_Message__c.field-meta.xml
<CustomField>
    <fullName>agx_Status_Message__c</fullName>
    <label>Status Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>